# Silaty

./: README.md  meson.build  org.silaty.Silaty.json
data/: meson.build  org.silaty.Silaty.appdata.xml.in  org.silaty.Silaty.desktop.in  org.silaty.Silaty.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  silaty.gresource.xml  window.blp  window.ui  window.vala
